--- a/crud-testing/pnpm-workspace.yaml
+++ b/crud-testing/pnpm-workspace.yaml
@@ -1,3 +1,7 @@
 packages:
- - 'apps/*'
- - 'packages/*'
+  - "apps/*"
+  - "packages/*"
+allowedDeprecatedVersions:
+  esbuild-kit/core-utils: "*"
+  esbuild-kit/esm-loader: "*"
+  node-domexception: "*"
